--- a/folios/folio_polymat.html
+++ b/folios/folio_polymat.html
@@ -53,12 +53,12 @@ In addition, I personally had a bit of a head start in that I had visited Margat
 <h5>Research formed the backbone of this project to arguably a larger degree than some other past projects. This involved interviews, primary and secondary research, the creation of a ‘cultural map’ in groups, a three-day site visit and personal observations and anecdotes.</h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/silicone_samples.png' alt="3D printed and cast silicone samples" />
+  <img class="hor" src='/folios/polymat/img/silicone_samples.png' alt="3D printed and cast silicone samples" />
   <p class="img-footer"></p>
 </div>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/105.jpg' alt="Margate Presentation Boad Two" />
+  <img class="hor" src='/folios/polymat/img/model_demo.jpg' alt="Margate Presentation Boad Two" />
   <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
@@ -68,6 +68,11 @@ The core of this idea is to place Margate at the centre of a broader artistic co
 
 Margate has a rising art scene as personified by the greatly successful Turner Contemporary gallery but is somewhat stunted by its remote location and lack of other attractions. By offering figurative and literal links to other such locations, a coherent experience can be created centred around Margate with connections to London and Dover to entice tourists.
 </h5>
+  
+<div class="img-box text-center">
+  <img class="hor" src='/folios/polymat/img/model_manufacture.jpg' alt="Margate Presentation Boad Two" />
+  <p class="img-footer">Second Final Presentation Board</p>
+</div>
 
 <h5>Reflecting back on the project I would have liked to delve deeper into specific aspects of the design like what the onboard commentary would have consisted of, more detail put into the design of the vessels and in general, added more user touch points to make the idea more unique.
 
