--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -2,23 +2,20 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch </title>
+  <title>Robyn Veitch </title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="/css/style_folio.css">
-
+  <link rel="stylesheet" href="/css/style_folio.css">
   <link rel="icon" type="image/png" href="/faveicon.png">
 
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/NAME/img/NAME.jpg)'>
-  <img src='http://oddert.github.io/folios/FOLDER_NAME/img/FOLDER_BANNER.jpg' class="header-img" alt='' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/zugriff/img/zugriff_banner.jpg)'>
+  <img src='http://oddert.github.io/folios/zugriff/img/sugriff_banner.jpg' class="header-img" alt='Zugriff Banner Image' /></div>
 
-<a href='/pdfs/PROJECT_NAME.pdf' target="_blank" class="a-pdf">
+<a href='/pdfs/zugriff.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -30,32 +27,32 @@
 
 </a>
 
-<h1 class="text-center"></h1>
+<h1 class="text-center">Zeiss Zugriff Outdoor Speaker Concept</h1>
 
 <h4 class="text-center">
-
+  Lorem ipsum...
 </h4>
 
 <h5>
+  Lorem ipsum...
+</h5>
 
+<div class="img-box text-center">
+  <img class="hor" src='/folios/zugriff/img/zeiss_moodboard.png' alt="Zeiss moodboard" />
+  <p class="img-footer">A moodboard of various Zeiss products / promotional imagery.</p>
+</div>
+
+<h5>
+  Lorem ipsum...
 </h5>
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="" />
-  <p class="img-footer"></p>
+  <p class="img-footer">Lorem ipsum...</p>
 </div>
 
 <h5>
-
-</h5>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="" />
-  <p class="img-footer"></p>
-</div>
-
-<h5>
-
+  Lorem ipsum...
 </h5>
 
 <div class="footer">
