--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/zugriff/img/zugriff_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/zugriff/img/sugriff_banner.jpg' class="header-img" alt='Zugriff Banner Image' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/zugriff/img/zugriff_banner.png)'>
+  <img src='http://oddert.github.io/folios/zugriff/img/sugriff_banner.png' class="header-img" alt='Zugriff Banner Image' /></div>
 
 <a href='/pdfs/zugriff.pdf' target="_blank" class="a-pdf">
 
