--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class='header-img-container torch' style='background-image: url(/folios/zugriff/img/zugriff_banner.png)'>
-  <img src='http://oddert.github.io/folios/zugriff/img/sugriff_banner.png' class="header-img" alt='Zugriff Banner Image' /></div>
+  <img src='/folios/zugriff/img/sugriff_banner.png' class="header-img" alt='Zugriff Banner Image' /></div>
 
 <a href='/pdfs/zugriff.pdf' target="_blank" class="a-pdf">
 
