--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/zugriff/img/zugriff_banner.png)'>
+  <div class='header-img-container zugriff' style='background-image: url(/folios/zugriff/img/zugriff_banner.png)'>
   <img src='/folios/zugriff/img/sugriff_banner.png' class="header-img" alt='Zugriff Banner Image' /></div>
 
 <a href='/pdfs/zugriff.pdf' target="_blank" class="a-pdf">
