--- a/index.html
+++ b/index.html
@@ -170,6 +170,33 @@
       View my front end web-development certificate on my <a href='http://www.freecodecamp.com/oddert' target='_blank'>Free Code Camp profile</a>.</h4>
         </div>
 
+        <a href='https://codepen.io/Oddert/pen/pLVvWL' target='_blank'>
+          <div class="col-sm-4 project dungeon">
+            <div class="cover"></div>
+            <h2 class="icon_title">Rouge-like dungeon crawler</h2>
+            <p class="icon_desc">A React-Redux game based on a classc dungeon crawler.
+            </p>
+          </div>
+        </a>
+        <a href='https://glitch.com/edit/#!/clever-growth?path=README.md:1:0' target='_blank'>
+          <div class="col-sm-4 project vote">
+            <div class="cover"></div>
+            <h2 class="icon_title">Voting app</h2>
+            <p class="icon_desc">A full stack app to create and share straw-poles</p>
+          </div>
+        </a>
+        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
+          <div class="col-sm-4 project nightlife">
+            <div class="cover"></div>
+            <h2 class="icon_title">Nigth life coordinator</h2>
+            <p class="icon_desc">A full stack app to show the nightlife plans of local users.
+            </p>
+          </div>
+        </a>
+        
+      </div>
+      
+      <div class="row">
         <a href='https://codepen.io/Oddert/pen/eEOxKW' target='_blank'>
           <div class="col-sm-4 project recipies">
             <div class="cover"></div>
