--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <a href='https://oddert.github.io/pdfs/higher_assignment.pdf' target='_blank'>
           <div class="col-sm-4 project dog">
             <div class="cover"></div>
-            <h2 class="icon_title">Advanced Higher Art and Design</h2>
-            <p class="icon_desc">A year long exploratory project culminating in an interactive lighting design outcome.</p>
+            <h2 class="icon_title">Child's AI Dog Companion</h2>
+            <p class="icon_desc">A 'toy' dog created to entertain children and teach empathy where real pets are unsuitable.</p>
           </div>
         </a>
       </div>
@@ -148,15 +148,15 @@
         <a href='https://s-media-cache-ak0.pinimg.com/564x/2b/df/87/2bdf87448c5031f66f68000163ab348b.jpg' target='_blank'>
           <div class="col-sm-4 project trid">
             <div class="cover"></div>
-            <h2 class="icon_title">Swiss Army Knife Graphics</h2>
-            <p class="icon_desc">Graphics designed for the casing for the casing of Victorinox’s Swiss Army Knife.</p>
+            <h2 class="icon_title">Tri-D Chess Set.</h2>
+            <p class="icon_desc">A replica Star Trek '3D Chess Set' created as a gift.</p>
           </div>
         </a>
         <a href='https://oddert.github.io/folios/folio_arkwright.html' target='_blank'>
           <div class="col-sm-4 project arkwright">
             <div class="cover"></div>
-            <h2 class="icon_title">CCV Interface Table</h2>
-            <p class="icon_desc">A computer graphic interface designed on the open source CCV software.</p>
+            <h2 class="icon_title">Arkwright 'Hold, Store, Display'</h2>
+            <p class="icon_desc">An exploration into a 'holding device' for a consumer good.</p>
           </div>
         </a>
         
