--- a/folios/folio_polymat.html
+++ b/folios/folio_polymat.html
@@ -31,18 +31,19 @@
 <h1 class="text-center">Polymat kitchen grip assistance</h1>
 
 <h4 class="text-center">Polymat is a silicone grip mat designed to tackle issues involved in the kitchen where the user cannot properly grip an item which will otherwise slide about.</h4>
-
-<h5>For the first Unit 7 project we were asked to consider the concept of a multi-generational kitchen in the context of human-centered design. Minority groups including the disabled and elderly are often if not completely overlooked in design with a great many products promising to cater to their needs being ‘gadgety’ attempts to make a quick dollar.
-  </h5>
+  
+<h5>
+  For the first Unit 7 project we were asked to consider the concept of a multi-generational kitchen in the context of human-centred design. Minority groups including the disabled and elderly are often if not completely overlooked in design with a great many products promising to cater to their needs being ‘gadgety’ attempts to make a quick dollar.  
+ </h5>
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/polymat/img/alex_grip_ethnography.png' alt="Alex during the research stage" />
   <p class="img-footer"></p>
 </div>
 
-<h5>I was very excited for this project, not only was it the first structured project of my return to the course but it was a chance to act on the idea of using design to effect positive change in a real-life context, to break away from the established idea of physical, consumer-based product design.
+<h5>Less than a quarter of people with physical disabilities are born with them, working with Alex (in the images above) we explored the idea of how even a minor impairment (in his case the depleted ability of the left side of his body) can greatly affect the manipulation of kitchen equipment. In particular because a lack of ability to stabilise an item leads to it sliding around.
 
-In addition, I personally had a bit of a head start in that I had visited Margate before and given some amount of thought to the basic premise of this project.
+I became interested in the idea of onset impairment or impairments that will go away eventually (eg broken limb). The market is full of gadgets and products ranging form the genuinely innovative to the obstructive and absurd.
 </h5>
 
 <div class="img-box text-center">
@@ -50,7 +51,9 @@ In addition, I personally had a bit of a head start in that I had visited Margat
   <p class="img-footer"></p>
 </div>
 
-<h5>Research formed the backbone of this project to arguably a larger degree than some other past projects. This involved interviews, primary and secondary research, the creation of a ‘cultural map’ in groups, a three-day site visit and personal observations and anecdotes.</h5>
+<h5>
+  I focused primarily on the kitchen sink, as washing dishes proves a key point of importance to food preparation, looking to create a responsive basin which provided variable resistance to pressure. The idea is that, where sliding objects becomes an issue, the user will simply push harder and the basin will grip the object.  
+</h5>
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/polymat/img/silicone_samples.png' alt="3D printed and cast silicone samples" />
@@ -58,25 +61,26 @@ In addition, I personally had a bit of a head start in that I had visited Margat
 </div>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/polymat/img/model_demo.jpg' alt="Margate Presentation Boad Two" />
+  <img class="hor" src='/folios/polymat/img/model_demo.jpg' alt="The presentation model in demonstration" />
   <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
-<h5>My design solution was a conceptual ferry service operating an ‘Art Tour’ around Margate, connecting visitors to key areas of cultural and artistic significance around the east coast.
-
-The core of this idea is to place Margate at the centre of a broader artistic context and culture.
-
-Margate has a rising art scene as personified by the greatly successful Turner Contemporary gallery but is somewhat stunted by its remote location and lack of other attractions. By offering figurative and literal links to other such locations, a coherent experience can be created centred around Margate with connections to London and Dover to entice tourists.
+<h5>
+   This idea developed into a silicone mat with a variable texture surface designed to prodive a range of friction across as large a range of items as possible. Many sample patterns were designed, 3d printed and cast to settle on the optimal pattern.  
 </h5>
   
 <div class="img-box text-center">
-  <img class="hor" src='/folios/polymat/img/model_manufacture.jpg' alt="Margate Presentation Boad Two" />
+  <img class="hor" src='/folios/polymat/img/model_manufacture.jpg' alt="The final presentation model" />
   <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
-<h5>Reflecting back on the project I would have liked to delve deeper into specific aspects of the design like what the onboard commentary would have consisted of, more detail put into the design of the vessels and in general, added more user touch points to make the idea more unique.
+<h5>
+   A final ‘looks-like’ model was produced largely by CNC milling, Laser cutting and painting with a silicone rubber. It was unfortunately deemed too costly to cast in the target material.
 
-In addition I think the project could have benefited from more primary research mid-way through but overall it was a greatly interesting brief to tackle.
+  Reflecting on the project I wonder how imaginative the solution actually was. Visually striking perhaps but does it not simply add the plethora of Gadgets? Would users actually consider using it after or before impairment? Was there actually a change to the kitchen ‘System’? Did I play it safe?
+
+  This project especially was a chance to consider my position in relation to design, whilst I am more than happy with the outcome I find it imperative to recognise what this product is not, and what future outcomes must try harder to incorporate.
+  
 </h5>
 
 <div class="footer">
