--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -30,11 +30,11 @@
 <h1 class="text-center">Zeiss Zugriff Outdoor Speaker Concept</h1>
 
 <h4 class="text-center">
-  Lorem ipsum...
+  The Zugriff (German for bridge) is a conceptual product imagining is Carl Zeiss AG moved into the field of portable audio.
 </h4>
 
 <h5>
-  Lorem ipsum...
+  This project for Unit 5 asked us to consider branding and to explore, dismantle and analyse a brand image and design a ‘portable audio output device’ for that brand. I was given the optical and opto-electronics goliath Zeiss.
 </h5>
 
 <div class="img-box text-center">
@@ -43,16 +43,34 @@
 </div>
 
 <h5>
-  Lorem ipsum...
+  Carl Zeiss AG has been a sector leader for over 100 years, manufacturing lenses, optical products and specialising in the manufacture of micro-electronics (by way of their optics). A large and sterile brand, their ‘image’ is quite hard to place, certainly they wish to put forward an image of loyalty, stability and enabling but how much of that actually shines through their work?
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="Some initial hindge mechanism sketches" />
+  <p class="img-footer">Zeiss leads absolutely in the sectors in which they operate, they set the standards and often have a unique presence despite attempts at copying. It was important that this speaker embody that distinction.></p>
+</div>
+
+<h5>
+  I decided that in the highly unlikely case that Zeiss broke form their optics-only model, such a speaker would want to embody the values of versatility, perhaps linking to their large sports-optics range. It should embody a ‘quirky’ high technology functionality and should embody the stability, balance and engineering associated with other Zeiss products.
+</h5>
+
+<div class="img-box text-center">
+  <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="Final block model" />
+  <p class="img-footer">The final block model put across the physical feel of the device despite not having a ‘proper’ hinge.</p>
+</div>
+
+<h5>
+  The final designed carried through a mirrored 360 hinge mechanism to allow differing modes of sound output (direction vs ambient). The unit is highly durable, made of an experimental fibre mesh aluminium and designed to compliment Zeiss’s sports optics range.
 </h5>
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/NAME/img/NAME.jpg' alt="" />
-  <p class="img-footer">Lorem ipsum...</p>
+  <p class="img-footer">An annotated render from my presentation showing key points of functionality.</p>
 </div>
 
 <h5>
-  Lorem ipsum...
+  In reflection I found this project very challenging, after all Zeiss isn’t what I’d call a flexible brand. I enjoyed the chance to broaden my scope on branding and to consider the semiotic meanings and associations embodied by brands beyond simple aesthetic surface-level messaging.
 </h5>
 
 <div class="footer">
