--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
           <div class="col-sm-4 project nightlife">
             <div class="cover"></div>
-            <h2 class="icon_title">Nigth life coordinator</h2>
+            <h2 class="icon_title">Night life coordinator</h2>
             <p class="icon_desc">A full stack app to show the nightlife plans of local users.
             </p>
           </div>
