--- a/msc/root-to-root/survey.html
+++ b/msc/root-to-root/survey.html
@@ -9,6 +9,17 @@
     <link href="/msc/root-to-root/css/unit7Survey.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
   </head>
+  <style>
+    .links line {
+      stroke: #999;
+      stroke-opacity: 0.6;
+    }
+
+    .nodes circle {
+      stroke: #fff;
+      stroke-width: 1.5px;
+    }
+  </style>
   <body>
     <div class="root"></div>
   </body>
