--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
       </div>
 
       <div class="row">
-        <a href='https://codepen.io/Oddert/pen/PjgeNv' target='_blank'>
-          <div class="col-sm-4 project leaderBoard">
+        <a href='https://crimson-bandana.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project stock">
             <div class="cover"></div>
-            <h2 class="icon_title">FCC Leader board</h2>
-            <p class="icon_desc">A React-based data visualisation project to display the top scoring Free Code Camp users.
+            <h2 class="icon_title">Live Stock Market Viewer</h2>
+            <p class="icon_desc">A real-time application to view stock trend lines with live data provided by websockets.
             </p>
           </div>
         </a>
