stopped profile img loading over http / https

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <span id="type">Hello. My name is Robyn and I'm a problem solver </span><span id="blink">|</span>
         </div>
         <div class="col-sm-4 page_profile-header-image text-center">
-          <img src="http://oddert.github.io/img/main_profile.png">
+          <img src="/img/main_profile.png">
         </div>
       </div>
       <div class="row page_profile-bio">
