changed an index href to see if it will break becuase I dont know what I was on when I made this

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="page_one_anchor"></div>
 
 <div id="header">
-  <a href='#'><img src="https://oddert.github.io/img/logo_four.png" id="header_image" /></a>
+  <a href='#'><img src="/img/logo_four.png" id="header_image" /></a>
   <div id="header_cover"></div>
   <div class="navBar">
     <div class="navIcons">
@@ -49,7 +49,7 @@
     <div class="container-fluid folio">
 
       <div class="row">
-        <a href='https://oddert.github.io/folios/folio_polymat.html' target='_blank'>
+        <a href='/folios/folio_polymat.html' target='_blank'>
           <div class="col-sm-4 project polymat">
             <div class="cover"></div>
             <h2 class="icon_title">Polymat Kitchen Grip Assistance</h2>
