Changed the rest of the index hrefs

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <p class="icon_desc">A multi-purpouse gripping mat to aid fading grip / dexteritey in the kitchen.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_zugriff.html' target='_blank'>
+        <a href='/folios/folio_zugriff.html' target='_blank'>
           <div class="col-sm-4 project zugriff">
             <div class="cover"></div>
             <h2 class="icon_title">Zeiss Zugriff Outdoor Speaker</h2>
             <p class="icon_desc">An experimental conceptual adventure speaker designed for Carl Zeiss AG.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_margate.html' target='_blank'>
+        <a href='/folios/folio_margate.html' target='_blank'>
           <div class="col-sm-4 project margate">
             <div class="cover"></div>
             <h2 class="icon_title">The Margate Art Tour</h2>
@@ -73,21 +73,21 @@
       </div>
 
       <div class="row">
-        <a href='https://oddert.github.io/folios/folio_station_lighting.html' target='_blank'>
+        <a href='/folios/folio_station_lighting.html' target='_blank'>
           <div class="col-sm-4 project station">
             <div class="cover"></div>
             <h2 class="icon_title">Station Lighting / Interactive Board</h2>
             <p class="icon_desc">An interactive station installation acting as an alternative lighting system.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_torch.html' target='_blank'>
+        <a href='/folios/folio_torch.html' target='_blank'>
           <div class="col-sm-4 project longevity">
             <div class="cover"></div>
             <h2 class="icon_title">Longevity</h2>
             <p class="icon_desc">An emergency survival torch designed to explore the design process applied to a specific consumer good.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/sparda/img/sparda_banner.jpg' target='_blank'>
+        <a href='/folios/sparda/img/sparda_banner.jpg' target='_blank'>
           <div class="col-sm-4 project sparda">
             <div class="cover"></div>
             <h2 class="icon_title">Bank Branch Bench</h2>
@@ -98,21 +98,21 @@
 
       <div class="row">
 
-        <a href='https://oddert.github.io/folios/folio_fusion_poster.html' target='_blank'>
+        <a href='/folios/folio_fusion_poster.html' target='_blank'>
           <div class="col-sm-4 project fusion">
             <div class="cover"></div>
             <h2 class="icon_title">Nat Five Course Template</h2>
             <p class="icon_desc">A poster created as an architype for the Product Design National Five course re-write in high school.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_thematic.html' target='_blank'>
+        <a href='/folios/folio_thematic.html' target='_blank'>
           <div class="col-sm-4 project thematic">
             <div class="cover"></div>
             <h2 class="icon_title">Graphics Thematic Folio</h2>
             <p class="icon_desc">A thematic CAD folio to represent and communicate the design of a consumer good.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/pdfs/higher_assignment.pdf' target='_blank'>
+        <a href='/pdfs/higher_assignment.pdf' target='_blank'>
           <div class="col-sm-4 project dog">
             <div class="cover"></div>
             <h2 class="icon_title">Child's AI Dog Companion</h2>
@@ -122,14 +122,14 @@
       </div>
 
       <div class="row">
-        <a href='https://oddert.github.io/folios/folio_victorinox.html' target='_blank'>
+        <a href='/folios/folio_victorinox.html' target='_blank'>
           <div class="col-sm-4 project victorinox">
             <div class="cover"></div>
             <h2 class="icon_title">Swiss Army Knife Graphics</h2>
             <p class="icon_desc">Graphics designed for the casing for the casing of Victorinox’s Swiss Army Knife.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_ccv.html' target='_blank'>
+        <a href='/folios/folio_ccv.html' target='_blank'>
           <div class="col-sm-4 project ccv">
             <div class="cover"></div>
             <h2 class="icon_title">CCV Interface Table</h2>
@@ -153,7 +153,7 @@
             <p class="icon_desc">A replica Star Trek '3D Chess Set' created as a gift.</p>
           </div>
         </a>
-        <a href='https://oddert.github.io/folios/folio_arkwright.html' target='_blank'>
+        <a href='/folios/folio_arkwright.html' target='_blank'>
           <div class="col-sm-4 project arkwright">
             <div class="cover"></div>
             <h2 class="icon_title">Arkwright 'Hold, Store, Display'</h2>
@@ -404,9 +404,10 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
 </section>
 
 <img src="https://github.com/Oddert/oddert.github.io/blob/master/img/logo_one.jpg?raw=true" style="width: 100%" />-->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
 
